Fixes for issues 1 & 4

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,27 +7,22 @@
     android:gravity="center">
 
     <EditText
-        android:id="@+id/etUsername"
+        android:id="@+id/etRegisterUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/username_hint"/>
 
     <EditText
-        android:id="@+id/etPassword"
+        android:id="@+id/etRegisterPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password_hint"
         android:inputType="textPassword"/>
 
     <Button
-        android:id="@+id/btnLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_button"/>
-
-    <Button
-        android:id="@+id/btnRegister"
+        android:id="@+id/btnRegisterSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/register_button"/>
 </LinearLayout>
+
