--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -32,14 +32,38 @@
         android:text="Save Credentials"/>
 
     <Button
+        android:id="@+id/btnViewCredentials"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="View Credentials" />
+
+    <Button
+        android:id="@+id/btnSaveData"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Save Data" />
+
+    <Button
         android:id="@+id/btnViewData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="View Saved Data"/>
+        android:text="View Data"/>
+
+    <!--  Put button towards bottom -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical" />
 
     <Button
+
         android:id="@+id/btnLogout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Logout"/>
+        android:layout_gravity="bottom"
+        android:text="Logout"
+        android:backgroundTint="#FF0000"
+        />
+
 </LinearLayout>
