--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -26,6 +26,7 @@
         android:inputType="textPassword"/>
 
     <Button
+        android:layout_marginTop="14dp"
         android:id="@+id/btnRegisterSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
